[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/PlayerNameScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/Gamer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/UI/titleBG2.png" type="Texture" id=3]
[ext_resource path="res://UI/nameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=5]
[ext_resource path="res://assets/sprites/UI/targetOutline.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/target.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Player Name" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="TextureRect" type="TextureRect" parent="Node2D"]
margin_right = 160.0
margin_bottom = 120.0
texture = ExtResource( 3 )

[node name="A" parent="." instance=ExtResource( 4 )]
margin_left = 134.0
margin_top = 85.0
margin_right = 186.0
margin_bottom = 137.0

[node name="B" parent="." instance=ExtResource( 4 )]
margin_left = 185.0
margin_top = 85.0
margin_right = 237.0
margin_bottom = 137.0
letter = "B"

[node name="C" parent="." instance=ExtResource( 4 )]
margin_left = 236.0
margin_top = 85.0
margin_right = 288.0
margin_bottom = 137.0
letter = "C"

[node name="D" parent="." instance=ExtResource( 4 )]
margin_left = 287.0
margin_top = 85.0
margin_right = 339.0
margin_bottom = 137.0
letter = "D"

[node name="E" parent="." instance=ExtResource( 4 )]
margin_left = 338.0
margin_top = 85.0
margin_right = 390.0
margin_bottom = 137.0
letter = "E"

[node name="F" parent="." instance=ExtResource( 4 )]
margin_left = 389.0
margin_top = 85.0
margin_right = 441.0
margin_bottom = 137.0
letter = "F"

[node name="G" parent="." instance=ExtResource( 4 )]
margin_left = 440.0
margin_top = 85.0
margin_right = 492.0
margin_bottom = 137.0
letter = "G"

[node name="H" parent="." instance=ExtResource( 4 )]
margin_left = 134.0
margin_top = 136.0
margin_right = 186.0
margin_bottom = 188.0
letter = "H"

[node name="I" parent="." instance=ExtResource( 4 )]
margin_left = 185.0
margin_top = 136.0
margin_right = 237.0
margin_bottom = 188.0
letter = "I"

[node name="J" parent="." instance=ExtResource( 4 )]
margin_left = 236.0
margin_top = 136.0
margin_right = 288.0
margin_bottom = 188.0
letter = "J"

[node name="K" parent="." instance=ExtResource( 4 )]
margin_left = 287.0
margin_top = 136.0
margin_right = 339.0
margin_bottom = 188.0
letter = "K"

[node name="L" parent="." instance=ExtResource( 4 )]
margin_left = 338.0
margin_top = 136.0
margin_right = 390.0
margin_bottom = 188.0
letter = "L"

[node name="M" parent="." instance=ExtResource( 4 )]
margin_left = 389.0
margin_top = 136.0
margin_right = 441.0
margin_bottom = 188.0
letter = "M"

[node name="N" parent="." instance=ExtResource( 4 )]
margin_left = 440.0
margin_top = 136.0
margin_right = 492.0
margin_bottom = 188.0
letter = "N"

[node name="O" parent="." instance=ExtResource( 4 )]
margin_left = 134.0
margin_top = 187.0
margin_right = 186.0
margin_bottom = 239.0
letter = "O"

[node name="P" parent="." instance=ExtResource( 4 )]
margin_left = 185.0
margin_top = 187.0
margin_right = 237.0
margin_bottom = 239.0
letter = "P"

[node name="Q" parent="." instance=ExtResource( 4 )]
margin_left = 236.0
margin_top = 187.0
margin_right = 288.0
margin_bottom = 239.0
letter = "Q"

[node name="R" parent="." instance=ExtResource( 4 )]
margin_left = 287.0
margin_top = 187.0
margin_right = 339.0
margin_bottom = 239.0
letter = "R"

[node name="S" parent="." instance=ExtResource( 4 )]
margin_left = 338.0
margin_top = 187.0
margin_right = 390.0
margin_bottom = 239.0
letter = "S"

[node name="T" parent="." instance=ExtResource( 4 )]
margin_left = 389.0
margin_top = 187.0
margin_right = 441.0
margin_bottom = 239.0
letter = "T"

[node name="U" parent="." instance=ExtResource( 4 )]
margin_left = 440.0
margin_top = 187.0
margin_right = 492.0
margin_bottom = 239.0
letter = "U"

[node name="V" parent="." instance=ExtResource( 4 )]
margin_left = 134.0
margin_top = 238.0
margin_right = 186.0
margin_bottom = 290.0
letter = "V"

[node name="W" parent="." instance=ExtResource( 4 )]
margin_left = 185.0
margin_top = 238.0
margin_right = 237.0
margin_bottom = 290.0
letter = "W"

[node name="X" parent="." instance=ExtResource( 4 )]
margin_left = 236.0
margin_top = 238.0
margin_right = 288.0
margin_bottom = 290.0
letter = "X"

[node name="Y" parent="." instance=ExtResource( 4 )]
margin_left = 287.0
margin_top = 238.0
margin_right = 339.0
margin_bottom = 290.0
letter = "Y"

[node name="Z" parent="." instance=ExtResource( 4 )]
margin_left = 338.0
margin_top = 238.0
margin_right = 390.0
margin_bottom = 290.0
letter = "Z"

[node name="Back" parent="." instance=ExtResource( 4 )]
margin_left = 440.0
margin_top = 238.0
margin_right = 492.0
margin_bottom = 290.0
letter = "<"

[node name="Label" type="Label" parent="."]
margin_left = 176.0
margin_top = 37.0
margin_right = 458.0
margin_bottom = 69.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHOOSE YOUR NAME WISELY"
align = 1

[node name="first" type="Line2D" parent="."]
position = Vector2( -314, -411 )
scale = Vector2( 2, 2 )
points = PoolVector2Array( 223, 421, 283, 421 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )

[node name="label" type="Label" parent="first"]
margin_left = 219.0
margin_top = 329.0
margin_right = 293.0
margin_bottom = 431.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="second" type="Line2D" parent="."]
position = Vector2( -191, -411 )
scale = Vector2( 2, 2 )
points = PoolVector2Array( 224, 421, 283, 421 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )

[node name="label" type="Label" parent="second"]
margin_left = 217.0
margin_top = 329.0
margin_right = 298.0
margin_bottom = 431.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="third" type="Line2D" parent="."]
position = Vector2( -66, -411 )
scale = Vector2( 2, 2 )
points = PoolVector2Array( 223, 421, 283, 421 )
width = 5.0
default_color = Color( 1, 1, 1, 1 )

[node name="label" type="Label" parent="third"]
margin_left = 220.0
margin_top = 329.0
margin_right = 294.0
margin_bottom = 431.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Go" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 566.0
margin_top = 365.0
margin_right = 608.0
margin_bottom = 407.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
align = 2

[node name="Label" type="Label" parent="Go"]
margin_left = -30.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 38.0
text = "GO"
align = 2

[node name="Sprite" type="Sprite" parent="Go"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Go"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Go"]
margin_left = 37.0
margin_top = 19.0
margin_right = 74.0
margin_bottom = 26.0
color = Color( 0.309804, 0.262745, 0.180392, 1 )

[connection signal="mouse_entered" from="Go" to="." method="_on_Go_mouse_entered"]
[connection signal="mouse_exited" from="Go" to="." method="_on_Go_mouse_exited"]
[connection signal="pressed" from="Go" to="." method="_on_Go_pressed"]
